--- a/caliopen_website/assets/data/faq_fr.html
+++ b/caliopen_website/assets/data/faq_fr.html
@@ -39,7 +39,7 @@ En conséquence, nous espérons que de nombreuses structures utiliseront Caliope
 <dt>Est-ce qu'il y aura un client natif pour mobile (smartphone, tablette etc.)</dt>
 <dd>Nous nous focalisons pour le moment sur le développement de l'interface Web de Caliopen, mais nous prévoyons un client mobile dans le futur, oui. Les raisons d'être d'un tel client sont multiples: la possibilité d'ajouter les SMS de ses contacts à l'ensemble des conversations, le besoin d'accéder à certains messages depuis un environnement mobile... Il faut cependant bien garder à l'esprit que le niveau de confidentialité sera moindre avec un client mobile qu'avec l'interface Web, avec tout ce que ça implique en terme d'usage de Caliopen.</dd>
 
-<dt>Puis-je payer une entreprise pour m'installer Caliopen et le gérer pour moi, après tout je paye bien chez un nom d'hébergeur> pour mes mails.</dt>
+<dt>Puis-je payer une entreprise pour m'installer Caliopen et le gérer pour moi, après tout je paye bien chez un hébergeur pour mes mails.</dt>
 <dd>Il est probable que ce type de services fasse un jour partie du modèle économique d'un ou de plusieurs fournisseurs de Caliopen.</dd>
 
 <dt>Est ce que je pourrais heberger Caliopen chez moi?</dt>
