--- a/caliopen_website/assets/data/faq_en.html
+++ b/caliopen_website/assets/data/faq_en.html
@@ -76,7 +76,7 @@ You will probably soon want to convince your more important contacts to switch t
 <dd>Your privacy is in danger precisely because you created and used a lot of platforms to communicate...  Using Caliopen will let you centralize all your accounts into one secure system that will let you have all your messages in the same place, being aware of each's level of privacy.</dd>
 
 <dt>How can I use Caliopen to protect my family / my children?</dt>
-<dd>One of the most common misunderstanding in IT security is that one can't protect himself without protecting others.  Having the highest security level, encyptring messages and data, using different passwords, is useless if people you communicate with are not protected. Protecting you and your relatives is useless is others are using low security level systems. Of course, you can use Caliopen to make your online communication secure, but it we be really secure only whe, seeing the low security level of the messages sent by your contacts, you become a prescriber and convince your contact to use secure systems.</dd>
+<dd>One of the most common misunderstanding in IT security is that one can't protect himself without protecting others.  Having the highest security level, encyptring messages and data, using different passwords, is useless if people you communicate with are not protected. Protecting you and your relatives is useless if others are using low security level systems. Of course, you can use Caliopen to make your online communication secure, but it we be really secure only whe, seeing the low security level of the messages sent by your contacts, you become a prescriber and convince your contact to use secure systems.</dd>
 
 <dt>What is behind the idea of confidentiality level ?</dt>
 
