--- a/caliopen_website/assets/data/faq_fr.html
+++ b/caliopen_website/assets/data/faq_fr.html
@@ -10,7 +10,7 @@ Le seul modèle économique prohibé par la charte est celui basé sur l'utilisa
 <dt>À quoi ça sert, je n'ai rien à cacher ?</dt>
 <dd>Même si vous n'avez rien à cacher (ce qui est probablement faux), vos correspondants, eux, n'ont peut-être pas les mêmes impératifs, ni la même façon d'aborder la protection de leur vie privée. En vous protégeant, vous protégez non seulement votre vie privée mais aussi celle de tous ceux qui échangent avec vous.</dd>
 
-<dt>J'aurai une adresse de courriel en @caliopen.org?</dt>
+<dt>J'aurai une adresse de courriel en @caliopen.org ?</dt>
 <dd>Non: c'est même sans doute le seul domaine dans lequel vous n'aurez aucune chance d'avoir une adresse de courriel. Le domaine "caliopen.org" restera la propriété du projet, même (et surtout) quand des services basés sur Caliopen ouvriront.<br/>
 
 Vous aurez le choix d'utiliser tel ou tel service basé sur Caliopen, et le nom de domaine proposé pourra être un des éléments de votre choix.</dd>
@@ -20,7 +20,7 @@ Vous aurez le choix d'utiliser tel ou tel service basé sur Caliopen, et le nom 
 <dd>Même sans participer au développement, vous pouvez aider le projet à avancer en le faisant connaître autour de vous, en en parlant, en relisant et en corrigeant nos documents (ou en les traduisant dans d'autres langues)… Le simple fait de nous poser des questions nous aide à mieux expliquer notre vision et nos objectifs. N'hésitez pas à nous rejoindre sur IRC (http://webchat.freenode.net , canal "#caliopen") ou par courriel (contact@caliopen.org).</dd>
 
 <dt>Je suis techos, cette FAQ ne me concerne pas, où puis-je avoir des réponses à mes questions techniques ?</dt>
-<dd>Caliopen est sur Github (https://github.com/CaliOpen, mais vous pouvez aussi nous rejoindre sur IRC (@Freenode/#caliopen) ou par courriel (contact@caliopen.org).</dd>
+<dd>Caliopen est sur Github (https://github.com/CaliOpen), mais vous pouvez aussi nous rejoindre sur IRC (@Freenode/#caliopen) ou par courriel (contact@caliopen.org).</dd>
 
 <dt>Quel est le point de départ pour filer un coup de main (problème simple ou pas, nouvelle fonctionnalité, …) ?</dt>
 <dd>Nous sommes ouverts à toute proposition : n'hésitez pas à intervenir sur Github directement, ou à venir discuter avec nous sur IRC ou par courriel.</dd>
@@ -36,16 +36,16 @@ Les technologies choisies ne sont pas adaptées à un usage local (même s'il es
 En conséquence, nous espérons que de nombreuses structures utiliseront Caliopen pour proposer des services de messagerie sécurisée ouverts au plus grand nombre.</dd>
 
 
-<dt>Est-ce qu'il y aura un client natif pour mobile (smartphone, tablette, etc.)</dt>
+<dt>Est-ce qu'il y aura un client natif pour mobile (smartphone, tablette, etc.) ?</dt>
 <dd>Nous nous focalisons pour le moment sur le développement de l'interface Web de Caliopen, mais nous prévoyons un client mobile dans le futur, oui. Les raisons d'être d'un tel client sont multiples: la possibilité d'ajouter les SMS de ses contacts à l'ensemble des conversations, le besoin d'accéder à certains messages depuis un environnement mobile… Il faut cependant bien garder à l'esprit que le niveau de confidentialité sera moindre avec un client mobile qu'avec l'interface Web, avec tout ce que ça implique en termes d'usage de Caliopen.</dd>
 
-<dt>Puis-je payer une entreprise pour m'installer Caliopen et le gérer pour moi, après tout je paye bien chez un hébergeur pour mes courriels.</dt>
+<dt>Puis-je payer une entreprise pour m'installer Caliopen et le gérer pour moi, après tout je paye bien chez un hébergeur pour mes courriels ?</dt>
 <dd>Il est probable que ce type de services fasse un jour partie du modèle économique d'un ou de plusieurs fournisseurs de Caliopen.</dd>
 
-<dt>Est-ce que je pourrais héberger Caliopen chez moi?</dt>
+<dt>Est-ce que je pourrais héberger Caliopen chez moi ?</dt>
 <dd>Si vous disposez d'une infrastructure assez puissante pour ça, pourquoi pas ! Mais Caliopen n'est pas prévu pour un usage domestique.</dd>
 
-<dt>Pourrai-je toujours communiquer avec mes amis qui n'utilisent pas Caliopen?</dt>
+<dt>Pourrai-je toujours communiquer avec mes amis qui n'utilisent pas Caliopen ?</dt>
 <dd>Oui ! C'était même un des pré-requis à l'origine du projet.<br/>
 
 Quand un service tiers communique avec Caliopen, il le fait avec des protocoles standards (SMTP, XMPP, …) que Caliopen utilise aussi. Simplement - sauf si le service tiers est configuré au meilleur niveau de sécurité - les messages de vos amis ne seront pas affichés avec un très bon niveau de confidentialité dans l'interface de Caliopen.</dd>
@@ -53,7 +53,7 @@ Quand un service tiers communique avec Caliopen, il le fait avec des protocoles 
 <dt>Pourrais-je utiliser Caliopen avec mon compte de courriel actuel (Gmail, Outlook, etc.) ?</dt>
 <dd>Non, sauf si vous êtes assez patient pour attendre que Microsoft et Google décident d'utiliser Caliopen.</dd>
 
-<dt>Pourrais-je  utiliser ou re-router d'autres adresses de courriel sur Caliopen, et  répondre à mes correspondants avec ces adresses (sur le principe de  l'ajout de comptes "send mail as" dans Gmail ?)</dt>
+<dt>Pourrais-je  utiliser ou re-router d'autres adresses de courriel sur Caliopen, et  répondre à mes correspondants avec ces adresses (sur le principe de  l'ajout de comptes "send mail as" dans Gmail) ?</dt>
 <dd>Tout le principe de Caliopen est de permettre de réunir toutes ses conversations privées dans une interface unique, donc oui bien sûr vous pourrez re-router votre ancienne adresse vers votre compte Caliopen (et, pourquoi pas, répondre en utilisant aussi votre ancienne adresse: nul doute que cette fonction soit rapidement ajoutée si elle est utile, c'est tout l'intérêt du logiciel libre). Toutefois, il faut bien avoir conscience que, dans cette situation, le niveau de confidentialité affiché sera très bas, Caliopen n'ayant aucun moyen de connaître les possibilités d'interception de vos échanges entre leur émetteur et le 1er relais.<br/>
 
 Pour augmenter votre niveau de confidentialité, il vaudra mieux donner votre adresse Caliopen à vos contacts.</dd>
@@ -71,7 +71,7 @@ Il est donc très possible que vous souhaitiez rapidement convaincre vos corresp
 
 Vous protéger, protéger votre famille, ça ne sert pas à grand-chose si tous vos correspondants utilisent des systèmes peu sécurisés. Vous pouvez utiliser Caliopen pour ça, bien sûr, mais ça ne sera vraiment utile que si, en voyant le faible niveau de confidentialité des messages échangés avec des tiers, vous devenez prescripteur à votre tour pour convaincre vos contacts d'utiliser, eux aussi, des systèmes sécurisés.</dd>
 
-<dt>Peux-tu expliquer la notion de niveau de confidentialité?</dt>
+<dt>Peux-tu expliquer la notion de niveau de confidentialité ?</dt>
 <dd>Dans Caliopen, chaque élément possède son propre "niveau de confidentialité" qui informe l'utilisateur du degré de sécurité associé à tel ou tel contact, tel ou tel message ou conversation…<br/>
 
 Chaque terminal déclaré par l'utilisateur est, par exemple, noté entre autres en fonction de son usage (strictement personnel, familial, libre d'accès dans l'entreprise…), de son type (par nature, un téléphone portable est moins sécurisé qu'un PC de bureau, simplement parce qu'on peut le perdre plus facilement). Un terminal non déclaré (1ère utilisation) reçoit une note de zéro.<br/>
@@ -91,7 +91,7 @@ L'utilisateur a alors la possibilité d'associer ce terminal à son compte, de d
 
 Dans tous les cas, donc, l'utilisateur est le seul maître de ses déclarations: c'est en définitive sur lui et lui seul que repose la qualité des évaluations fournies par Caliopen.</dd>
 
-<dt>Pourquoi une association?</dt>
+<dt>Pourquoi une association ?</dt>
 <dd>Le fait de proposer une solution de sécurité qui repose sur un tiers (l'autohébergement n'étant pas adapté à une infrastructure de messagerie, ce seront souvent des tiers qui proposeront un service Caliopen) implique que la confiance de l'utilisateur dans son fournisseur de service ne soit pas donnée aveuglément.<br/>
 
 Le simple fait d'utiliser Caliopen n'est en rien suffisant: comme tout logiciel libre, Caliopen est modifiable à volonté par celui qui l'installe, et rien ne dit qu'il ne sera pas utilisé par des organisations pour lesquelles la vie privée n'a qu'une valeur marchande, par exemple.<br/>
@@ -147,6 +147,6 @@ Ce qui sera possible, en revanche, c'est de trier via les "labels" de Caliopen: 
 
 <dd>Pour les conserver, il suffit d'installer Caliopen sur votre domaine (ou de passer par un prestataire proposant ce service): si Caliopen gère votre MX, vous pourrez créer (ou utiliser) toutes les adresses @votredomaine que vous voudrez, non seulement en SMTP mais aussi en XMPP et dans tous les protocoles gérés par Caliopen, de la façon la plus sécurisée possible.</dd>
 
-<dt>Puis-je utiliser Caliopen en lieu et place d'une installation manuelle Postfix/Dovecot?</dt>
+<dt>Puis-je utiliser Caliopen en lieu et place d'une installation manuelle Postfix/Dovecot ?</dt>
 
 <dd>Oui, mais beaucoup plus facilement: déployer une infrastructure de messagerie bien configurée (TLS, DNSSEC, DANE, gestion des clés, chiffrement…) n'est pas une mince affaire: Caliopen simplifie toute cette procédure de manière à convaincre un maximum d'entités de disposer de leur propre système plutôt que de préférer les services existants et favoriser la centralisation des données personnelles chez les principaux acteurs.</dd>
