[fix] remaining /caliop[^e]/i into CaliopEN (bordel) and some typos in fr/en translations

--- a/caliopen_website/assets/mockup/createaccount.html
+++ b/caliopen_website/assets/mockup/createaccount.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>createAccount</title>
@@ -96,7 +96,7 @@
               <img id="u9_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u10" class="text">
-                <p><span style="color:#333333;">J'accepte les </span><span style="text-decoration:underline;color:#0000FF;">conditions générales d'utilisation</span><span style="color:#333333;"> ainsi que les </span><span style="text-decoration:underline;color:#0000FF;">règles de confidentialité</span><span style="color:#333333;"> de Caliop.</span></p>
+                <p><span style="color:#333333;">J'accepte les </span><span style="text-decoration:underline;color:#0000FF;">conditions générales d'utilisation</span><span style="color:#333333;"> ainsi que les </span><span style="text-decoration:underline;color:#0000FF;">règles de confidentialité</span><span style="color:#333333;"> de Caliopen.</span></p>
               </div>
             </div>
 
