Removed a useless question mark

--- a/caliopen_website/assets/data/faq_en.html
+++ b/caliopen_website/assets/data/faq_en.html
@@ -92,7 +92,7 @@ Finally, every CaliOpen instance should eventually get assigned a confidentialit
 
 This is the fundamental notion in CaliOpen: only by knowing at every moment the confidentiality level of an element is the user incitated to increase it - if possible -. This allows the user to make informed choices (e. g. to read a confidential message on an unsecure terminal is a very bad idea, which will lower the user's grade).</dd>
 
-<dt>In which ways is the human factor taken into account in CaliOpen? (in a device usage context)?</dt>
+<dt>In which ways is the human factor taken into account in CaliOpen? (in a device usage context)</dt>
 
 <dd>There is clear evidence that Caliopen cannot evaluate, on its own, the level of confidentiality for a given terminal, except when some tangible elements are given (e.g. SSL configuration of the browser). When the user is connecting for the first time on his/her account with a device he/she never used, the level of confidentiality is considered as null.<br/>
 
